# person_tracking

./: CMakeLists.txt  README.md  package.xml
launch/: person_tracker.launch
msg/: TrackedObject.msg
src/: dock_perforo.cpp  dock_perforo.h  navigate_perforo.cpp  navigate_perforo.h  select_target.cpp  select_target.h  track_pant.cpp  track_pant.h  track_shirt.cpp  track_shirt.h
